tdf#155443: MySQL/MariaDB direct connect: pb to change fieldname in table

Copy and simplify "getAlterTableColumnPart" from Mysql JDBC part which seems
to do the right job with table name.

Change-Id: I94d20b002a60f2ce1ea4d7e4de8040a9cbf04994
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152247
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit 7f950e018f708815258e7a50e6383167fdc75866)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152215
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>